@@ -33,9 +33,10 @@
         <api>devel</api>
     </stability>
     <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
-    <notes>
-- Small change to the command line interface, which did not return an
-  exit code != 0 when an exception occured.
+    <notesu>
+- Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
+  as unused when used inside double quoted string. Fixed in svn 
+  revision #187.
     </notes>
     <contents>
         <dir name="/">
